--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="Refresh" content="2; url=public/index.html" />
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <meta http-equiv="refresh" content="0; url=http://example.com"> -->
+    <meta http-equiv="Refresh" content="2; url=public/index.html" />
+    <title>Page Redirection</title>
+  </head>
+  <body></body>
+</html>
